--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,18 @@
-name:       fused-effects-logger
-version:    0.0.0.0
-license:    GPL-3
-author:     drlkf
-maintainer: drlkf@drlkf.net
-copyright:  2025 drlkf
-category:   Effect
+name:         fused-effects-logger
+version:      0.0.0.0
+license:      GPL-3
+license-file: LICENSE
+author:       drlkf
+maintainer:   drlkf@drlkf.net
+copyright:    2025 drlkf
+category:     Effect
+github:       haskell-github-trust/megaparsec-time
+homepage:     https://github.com/drlkf/fused-effects-logger
+bug-reports:  https://github.com/drlkf/fused-effects-logger/issues
+tested-with:
+  - GHC == 9.10
+  - GHC == 9.8
+  - GHC == 9.6
 
 extra-source-files:
   - README.md
