test: add missing test suite dependency

--- a/package.yaml
+++ b/package.yaml
@@ -50,6 +50,8 @@ tests:
       - -threaded
       - -rtsopts
       - -with-rtsopts=-N
+    build-tools:
+      - hspec-discover
     dependencies:
       - fused-effects-logger
       - directory
