--- a/fused-effects-logger.cabal
+++ b/fused-effects-logger.cabal
@@ -55,6 +55,8 @@ test-suite fused-effects-logger-test
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:
+      hspec-discover:hspec-discover
   build-depends:
       base >=4.7 && <5
     , bytestring >=0.12 && <1
