--- a/fused-effects-logger.cabal
+++ b/fused-effects-logger.cabal
@@ -61,6 +61,7 @@ test-suite fused-effects-logger-test
       base >=4.7 && <5
     , bytestring >=0.12 && <1
     , directory
+    , filepath
     , fused-effects >=1.1 && <2
     , fused-effects-logger
     , ghc-prim
